--- a/public/css/productions/list.css
+++ b/public/css/productions/list.css
@@ -7,7 +7,7 @@
 .production-row {
 	position: relative;
 	flex-direction: column;
-	margin: 2.5rem auto;
+	margin: 2.5rem auto 4rem auto;
 	row-gap: 1rem;
 }
 input.production-row__toggle {
@@ -18,6 +18,7 @@ input.production-row__toggle {
 }
 .published {
 	position: absolute;
+	top:calc(100% + 0.5rem);
 }
 .production-row-controls {
 	order: 2;
@@ -35,7 +36,6 @@ input.production-row__toggle {
 	input.production-row__toggle {
 		position: absolute;
 		transform: translateY(-50%);
-		margin:auto;
 		left:0rem;
 		top:15%;
 	}
@@ -44,8 +44,6 @@ input.production-row__toggle {
 	}
 	.published {
 		transform: translate(-50%);
-		position: absolute;
-		top:100%;
 		left:50%;
 	}
 	.production-row-controls {
